# extenddb

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  extenddb.sample.toml  external-suites.sample.toml  external-suites.toml  pytest.ini  release-please-config.json  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: clippy.yml  fmt.yml  release-please.yml  test.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/auth/src/policy/: condition.rs  context.rs  document.rs  evaluator.rs  matcher.rs  mod.rs
crates/auth/src/sigv4/: canonical.rs  mod.rs  parse.rs  signing_key.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  serde_helpers.rs  throttle.rs  version.rs
crates/core/src/error/: messages.rs  mod.rs
crates/core/src/expression/: ast.rs  evaluator.rs  evaluator_tests.rs  key_condition.rs  mod.rs  parser.rs  parser_common.rs  projection.rs  reserved_words.rs  resolver.rs  tokenizer.rs  update_evaluator.rs  update_evaluator_tests.rs  update_parser.rs
crates/core/src/limits/: mod.rs
crates/core/src/metrics/: collector.rs  collector_query.rs  collector_tests.rs  mod.rs  types.rs
crates/core/src/types/: attribute_value.rs  backup.rs  batch.rs  capacity.rs  import_export.rs  item.rs  key_schema.rs  mod.rs  query.rs  stream.rs  table.rs  transaction.rs
crates/core/src/validation/: mod.rs  number.rs
crates/engine/: Cargo.toml
crates/engine/src/: backup.rs  batch_get_item.rs  batch_write_item.rs  capacity_helpers.rs  create_table.rs  delete_item.rs  delete_table.rs  describe_endpoints.rs  describe_limits.rs  describe_table.rs  expected.rs  expression_helpers.rs  get_item.rs  import_export.rs  import_export_io.rs  index_helpers.rs  legacy_filter.rs  lib.rs  list_tables.rs  put_item.rs  query.rs  read_helpers.rs  scan.rs  stream_capture.rs  streams.rs  tagging.rs  transact_get_items.rs  transact_write_helpers.rs  transact_write_items.rs  ttl.rs  update_item.rs  update_table.rs
crates/server/: Cargo.toml
crates/server/src/: authorization.rs  handler.rs  lib.rs  metrics_endpoint.rs  rate_limit.rs  request_helpers.rs  response.rs  throttle_helpers.rs
crates/server/src/console/: docs_embed.rs  html.rs  mod.rs  session.rs
crates/server/src/console/pages/: access_key_pages.rs  account_pages.rs  auth_pages.rs  docs_page.rs  group_pages.rs  metrics_content.rs  metrics_pages.rs  mod.rs  policy_pages.rs  role_pages.rs  settings_pages.rs  user_pages.rs
crates/server/src/management/: account.rs  admin.rs  assume_role.rs  auth.rs  crypto.rs  iam_group.rs  iam_policy.rs  iam_role.rs  iam_user.rs  iam_user_self.rs  mod.rs  ops.rs  ops_settings.rs  password.rs  permissions_boundary.rs  settings.rs
crates/storage/: Cargo.toml
crates/storage-postgres/: Cargo.toml
crates/storage-postgres/data_migrations/: 001_data_schema.sql
crates/storage-postgres/migrations/: 001_schema.sql
crates/storage-postgres/src/: admin_store.rs  authorization_store.rs  backup_engine.rs  bootstrapper.rs  catalog_store.rs  config.rs  create_table.rs  credential_store.rs  delete_table.rs  gsi_queue.rs  lib.rs  metadata_engine.rs  migrations.rs  pg_util.rs  stream_engine.rs  table_engine.rs  table_helpers.rs  update_table.rs  worker_store.rs
crates/storage-postgres/src/data/: data_engine.rs  ddl.rs  delete_item.rs  index.rs  mod.rs  put_item.rs  query.rs  query_scan.rs  transactions.rs  tx_helpers.rs  update_item.rs
crates/storage-postgres/src/management_store/: access_keys.rs  accounts.rs  groups.rs  mod.rs  policies.rs  roles.rs  users.rs
crates/storage/src/: authorization_store.rs  bootstrapper.rs  error.rs  lib.rs  transact.rs
crates/storage/src/management_store/: mod.rs  types.rs
crates/storage/src/util/: arn.rs  key.rs  mod.rs
devtools/: approved-licenses.txt  build-release  check-licenses  cleanup-test-tables  provision-test-credentials  run-coverage  run-external-tests  run-tests  verify-smoke
docker/: entrypoint.sh
docs/: NOTICE.md  backlog.md  build-docs.py  differences-from-dynamodb.md  dynamodb-limits.md  getting-started.md  local-postgres-setup.md  technical-debt.md  todo-index.md  troubleshooting.md
docs/adr/: 0000-template.md  0002-sql-injection-defense.md  README.md  documentation-format.md
docs/demo/: stream_consumer.py
docs/design/: 01-requirements.md  02-high-level-design.md  03-component-core.md  04-component-storage.md  05-component-auth-v3.md  05-component-auth.md  06-component-server.md  07-component-streams.md  08-component-config.md  09-testing.md  10-dependency-licenses.md  11-high-availability.md  README.md
rfcs/: 0000-template.md  README.md
samples/: sample_app.py  stream_consumer.py
scripts/: install-linux.sh  install-macos.sh
tests/: README.md  conftest.py  management_helpers.py  test_abac.py  test_auth_error_fidelity.py  test_auth_integration.py  test_auth_permissions.py  test_batch_operations.py  test_cli_lifecycle.py  test_concurrency.py  test_conditional_writes.py  test_console_integration.py  test_cross_account_isolation.py  test_gsi_async.py  test_import_export.py  test_item_operations.py  test_metrics.py  test_misc_operations.py  test_multipart_gsi.py  test_query_scan.py  test_streams.py  test_table_operations.py  test_transaction_operations.py  test_ttl.py
tests/rust/: Cargo.toml
tests/rust/src/: authorization.rs  backup_restore.rs  batch_get_item.rs  batch_write_item.rs  capacity_throttling.rs  composite_keys.rs  condition_expressions.rs  condition_expressions_more.rs  data_types.rs  delete_item.rs  delete_item_more.rs  empty_values.rs  error_handling.rs  get_item.rs  gsi.rs  gsi_more.rs  helpers.rs  main.rs  misc_control_plane.rs  put_item.rs  put_item_edge.rs  query.rs  query_more.rs  raw_http.rs  scan.rs  table_operations.rs  table_operations_more.rs  tagging.rs  test_base.rs  transact_get_items.rs  transact_write_items.rs  transact_write_items_more.rs  transaction_validation.rs  ttl.rs  unicode.rs  update_expressions.rs  update_expressions_more.rs  update_item.rs  update_item_edge.rs  update_item_more.rs
(+44 files in other folders)
