# Copyright 2026 ExtendDB contributors
# SPDX-License-Identifier: Apache-2.0
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/engine",
    "crates/storage",
    "crates/storage-postgres",
    "crates/auth",
    "crates/server",
    "crates/bin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
extenddb-core = { path = "crates/core" }
extenddb-engine = { path = "crates/engine" }
extenddb-storage = { path = "crates/storage" }
extenddb-storage-postgres = { path = "crates/storage-postgres" }
extenddb-auth = { path = "crates/auth" }
extenddb-server = { path = "crates/server" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "set-header"] }
hyper = { version = "1" }

# Database plugin registry
inventory = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid", "bigdecimal"] }

# Crypto & checksums
crc32fast = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
bigdecimal = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
aes-gcm = "0.10"
rand = "0.9"

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# TLS
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
rcgen = "0.14"

# Process management
daemonize = "0.5"
libc = "0.2"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
syslog-tracing = "0.3"
metrics = "0.24"

# Config
clap = { version = "4", features = ["derive"] }
config = "0.14"

# Security
zeroize = { version = "1.8", features = ["derive"] }
