# Copyright 2026 ExtendDB contributors
# SPDX-License-Identifier: Apache-2.0
[package]
name = "extenddb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
extenddb-core = { workspace = true }
extenddb-engine = { workspace = true }
extenddb-storage = { workspace = true }
extenddb-auth = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
uuid = { workspace = true }
metrics = { workspace = true }
anyhow = { workspace = true }
bcrypt = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
