# Copyright 2026 ExtendDB contributors
# SPDX-License-Identifier: Apache-2.0
[package]
name = "extenddb-storage-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
extenddb-core = { workspace = true }
extenddb-storage = { workspace = true }
extenddb-auth = { workspace = true }
inventory = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
rand = { workspace = true }
bcrypt = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
zeroize = { workspace = true }

